# academycloud_frontend

./: .gitignore  README.md  bg_source.ai  cookies_exm.py  logo_soucre.ai  pyproject.toml
.streamlit/: config.toml
src/: app.py  image_upload.py
src/pages/auth/: page.py  schemas.py
src/pages/home/: page.py
src/pages/leaderboard/: leaderboard_main_page.py
src/pages/lesson/: lesson_catalog_page.py  lesson_distributor_page.py  lesson_test_page.py
src/pages/main/: page.py
src/pages/profile/: profile_main_page.py  profile_setup_page.py  schemas.py  setup_profile_page.py
src/static/: styles.py
src/utils/: authentificate_user.py  config.py  confirm_answers.py  cookies.py  deactivate_user.py  get_items.py  get_leaderboard.py  get_lesson.py  get_lessons.py  get_profile.py  get_scoreboard.py  get_week_dates.py  login.py  logout.py  register.py  restore_account.py  right_rerun.py  send_confirm_email.py  update_profile.py  update_user.py  upload_file.py
